tests/chapter_18/valid/parameters/libraries/pass_struct_client.c
struct pair {
    int x;
    int y;
};

int foo(struct pair p);

int main(void) {
    struct pair arg = {1, 2};
    return foo(arg);
}