tests/chapter_18/invalid_parse/structure_member_is_function.c
struct s {
  int foo(void);
};